# echo

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.arm64  LICENSE  README.md  azure-pipelines.yml
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: echo_request.rs  main.rs  middleware.rs  otel.rs
